mdfserver/static/mdfserver/css/custom_style.css
/*Custom Style File*/


.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
}


#iutah_logo {
    float: left;
    clear: both;
    height: 60px;
    margin-left: -2px;
}

#main_title {
    padding-top: 4px;
    font-size: 25px;
    margin-bottom: 8px;

}

#second_title {
    font-size: 11px;
    margin-top: -7px;
    padding-left: 2px;
}

#map-canvas {
    margin-top: 11px;
    height: 400px;
}

#map-canvas img
{
    position: fixed;
    top: 0;
    left: 0;
   width: 50px;
}

#main_title, #second_title {
    text-decoration: none;
    color: #6D6E71;
    margin-left: 145px;
}

#home_linker:hover {
    text-decoration: none;
}

#title_logo {
    height: 70px;
}

.center_header {
    width: 940px;
    margin-right: auto;
    margin-left: auto;
}

#page-header {
    position: fixed;
    width: 100%;
    z-index: 10;
}

.big_image {
    width: 87%;
    height: 440px;
}

.image_msg {
    margin-top: -40px;
    width: 940px;
    background-color: white;
    position: relative;
    opacity: 0.6;
    z-index: 1;
    border-radius: 5px;
    color: black;
    padding-top: 5px;
}

.image_msg span {
    opacity: 1;
}

#spacer {
    padding-top: 111px;
}

#slider {
    margin: 0%;
    width: 1080px;
}

#site_content {
    padding-top: 20px;
    padding-bottom: 20px;
    min-height: 575px;
}

/*Experimenting from here on*/


* {
    margin: 0;
    padding: 0;
}

/* tell the browser to render HTML 5 elements as block */

article, aside, figure, footer, header, hgroup, nav, section {
    display: block;
}

.column_left {
    width: 350px;
    float: left;
}

.column_right {
    width: 460px;
    float: right;
    border-left: 1px dotted lightblue;
    padding-left: 30px;
}

body {
    font: normal .80em arial, sans-serif;
    color: #444;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif !important;
    background-color: #C2DBE8;
    /* IE10 Consumer Preview*/
    background-image: -ms-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Mozilla Firefox*/
    background-image: -moz-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Opera*/
    background-image: -o-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* Webkit (Safari/Chrome 10)*/
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #F5F5F5));

    /* Webkit (Chrome 11+)*/
    background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #F5F5F5 100%);

    /* W3C Markup, IE10 Release Preview */
    background-image: linear-gradient(to bottom, #FFFFFF 0%, #F5F5F5 100%);
    background-repeat: no-repeat;
    background-attachment: fixed;
    /*height: 100%;*/
}

p {
    padding: 0 0 20px 0;
    line-height: 1.7em;
    text-align: justify;
}

.sideImage ~ p ~ h2 {
    margin-top: 90px;
}

.dropdown-menu {
    border-radius: 3px;
    margin-top: 0;
    border-top: 1px #f2f2f2 solid;;
}

#content p {
    font-size: 12px;
}

h2 + p {
    border-top-style: groove;
    border-top-left-radius: 4px;
    border-top-right-radius: 10px;
    margin-top: -12px;
}

img {
    border: 0;
    max-width: 1800px;
}

a img
{
    max-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    color: #425766;
    letter-spacing: 0em;

}

table {
    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    font-size: 12px;
    margin: 20px 0px;
    width: 100%;
    text-align: left;
    border-collapse: collapse;
    border: 1px solid #69c;
}

th {
    padding: 7px 25px;
    font-weight: normal;
    font-size: 14px;
    color: #039;
}

tbody {
    background: #e8edff;
}

td {
    padding: 7px 25px;
    color: #669;
    border-top: 1px dashed #fff;
}

tbody tr:hover td {
    color: #339;
    background: #d0dafd;
}


h1, h2, h3 {
  font: normal 180% "Lucida Sans Unicode", "Lucida Grande", sans-serif ;

}
/*
#content h1 {
  clear: both;
  font-size: 160%;
  color: #222;
  font-weight: bold;
  padding-top: 20px;
}

#content h2 {
  margin-top: 10px;
  clear: both;
  font-size: 130%;
  padding: 5px 0 5px 0;
  color: #788E1E;
  border-bottom: 2px solid #BCCA9B;
}*/

h3 {
  font-size: 140%;
  padding: 5px 0 0 0;
}

h4, h6 {
  color: #F67400;
  padding: 0 0 5px 0;
  font: normal 130% arial, sans-serif;
}

h5, h6 {
  color: #555;
  font: italic 95% arial, sans-serif;
  letter-spacing: normal;
  padding: 0 0 15px 0;
}
a, a:hover {
  outline: none;
  text-decoration: underline;
  color: inherit;
}

a{
    text-decoration: none;
}

a:hover {
  color: #00A5E3;
}

.region-content {
    margin-left: 15px;
    margin-right: 15px;
    padding-top: 10px;

}

strong {
    color: #425766;
}

a {
    color: #6F8A9E;
}

h1 {
    font-size: 29px;
}

h2 {
    font-size: 22px;
    border-bottom: 2px lightgray;
    border-bottom-style: solid;
    border-bottom-style: groove;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 10px;
}

h3 {
    font-size: 18px;
}

/*
blockquote {
  margin: 20px 0;
  padding: 10px 20px 0 20px;
  border: 1px solid #E5E5DB;
  background: #FFF;
}

ul {
  margin: 2px 0 22px 17px;
}

ul li {
  //list-style-type: circle;
  margin: 0 0 6px 0;
  padding: 0 0 4px 5px;
  line-height: 1.5em;
}

ol {
  margin: 8px 0 22px 20px;
}

ol li {
  margin: 0 0 11px 0;
}

.left {
  float: left;
  width: auto;
  margin-right: 10px;
}

.right {
  float: right;
  width: auto;
  margin-left: 10px;
}

.center {
  display: block;
  text-align: center;
  margin: 20px auto;
}*/

#main, nav, #container, #logo, #site_content, footer {
    margin-left: auto;
    margin-right: auto;
}

#main {
    margin: 5px auto;
    background: transparent;
    padding-bottom: 30px;
}

header {
    background: transparent;
    height: 110px;
}

/*

#logo {
  margin-top: 25px;
  height: inherit;
  background: transparent;
  color: #888;
  padding: 0 0 0 0px;
}

#logo img {
  position:absolute;
  float:left;
}
/* ... */

